2002-01-15  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* scripts/redhat-ctl-amd.in: refer to @sbindir@ not
	${prefix}/sbin.

	* scripts/ctl-{amd,hlfsd}.in: refer to @sysconfdir@ not
	${prefix}/etc.  Bug report from "A Braunsdorf"
	<ab@eas.purdue.edu>.

2002-01-13  Erez Zadok  <ezk@localhost.localdomain>

	* configure.in: only check for clock_gettime if --enable-debug was
	used.

	* aux/macros/opt_debug.m4: define a cache variable to record value
	of debug option used.

	* libamu/xutil.c (show_time_host_and_name): do not use
	clock_gettime unless debugging was compiled in.  This way, if
	debugging is not compiled, we don't bother linking with librt,
	libpthread, and a whole lot of other libraries that aren't that
	necessary (esp. on Linux).

2002-01-12  Erez Zadok  <ezk@wavy.dyn.optonline.net>

	* doc/am-utils.texi (opts Option): document loop option.

	* include/am_utils.h: each mounted file system (mntfs) should
	optionally store the loop device used in the field mf_loopdev.

	* conf/nfs_prot/nfs_prot_linux.h: define HAVE_LOOP_DEVICE and some
	loop function extern definitions.  For now this code is here
	because we only support loop devices on Linux.

	* conf/mount/mount_linux.c: recognize "loop" as a valid iso9660
	mount option.
	(parse_opts): when skipping over unknown mount options, skip over
	"loop" (since it was given in amd map entry), but not over
	loop=/dev/loopX, because the latter will go into /etc/mtab.
	(do_mount_linux): override actual cdfs mounted  device name
	because with loop devices you don't mount the .iso file directly,
	but the /dev/loopX device that was setup for it.
	(show_loop, is_loop_device, find_unused_loop_device,
	setup_loop_device, delete_loop_device): support code for loop
	devices.

	* amd/ops_cdfs.c (mount_cdfs): pass loop device name to function.
	setup loop device before isofs mount, if "loop" option was given,
	before actual mount(2).
	(cdfs_mount): pass loopdev name to mount_cdfs().