@@ -91,3 +91,4 @@ A.i386-pc-bsdi4.2
 A.i386-pc-linux-rh7.2
 A.i386-unknown-freebsd5.0
 A.i386-pc-linuxlibc1-rh4.2
+A.i386-pc-solaris2.8
